# Oxted-Hurst-Green-Bugle

./: .env.example  .gitignore  PRD.md  README.md  index.html  pyproject.toml
.claude/: settings.local.json
.github/workflows/: claude.yml  daily-collect.yml  pages.yml  train-alerts.yml
admin/: events_cli.py
alerts/: __init__.py  email.py  sms.py
collectors/: __init__.py  base.py  bins.py  council.py  courts.py  crime.py  environment.py  events.py  planning.py  property.py  roads.py  trains.py
collectors/sports/: __init__.py  cricket.py  football.py  hockey.py
config/: settings.yaml  sources.yaml
public/data/output/: bins.json  council.json  courts.json  crime.json  environment.json  events.json  planning.json  property.json  roads.json  sports.json  trains.json
scripts/: collect_all.py  train_check.py
src/: config.py  main.py
src/gatherers/: __init__.py  planning.py  rss.py  weather.py
src/publishers/: __init__.py  file.py
src/scheduler/: runner.py
src/writers/: __init__.py  article.py  digest.py
streetworks/: README.md  __init__.py  api.py  config.py  events.py  filtering.py  geo.py  models.py  processor.py  sns.py  store.py  store_postgres.py
streetworks/db/: schema.sql
streetworks/static/: index.html
summariser/: __init__.py  claude.py
tests/: test_collectors.py  test_publishers.py  test_streetworks_acceptance.py  test_streetworks_unit.py
tests/fixtures/: permit_work_start_guildford.json  permit_work_start_oxted.json
