[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oxted-bugle"
version = "0.2.0"
description = "Automated hyperlocal newspaper for Oxted & Hurst Green, Surrey"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]

[project.scripts]
bugle-collect = "scripts.collect_all:main"
bugle-train-check = "scripts.train_check:main"
bugle-events = "admin.events_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["collectors*", "summariser*", "alerts*", "admin*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
